--- a/Pagina_Inicial/Css_Página Inicial.css
+++ b/Pagina_Inicial/Css_Página Inicial.css
@@ -78,7 +78,7 @@ form{
     width: 75px;
     height: 63px;
     background-color: rgb(223, 67, 26);
-    margin-left: 72em;
+    margin-left: 71em;
     margin-top: -4.6em;
     border-radius: 3px;
     border: none;
@@ -99,6 +99,28 @@ form{
     cursor: pointer;
 }
 
+#botao_idioma{
+    width: 51.2px;
+    height: 40px;
+    background-color: transparent;
+    margin-left: 88em;
+    margin-top: -4.9em;
+    border-radius: 3px;
+    border: none;
+    position: fixed;
+}
+
+#simbolo_US{
+    width: 51.2px;
+    height: 35.8px;
+    margin-top: -0.9em;
+    margin-left: -3.5em;
+}
+
+#simbolo_US:hover{
+    cursor: pointer;
+}
+
 #simbolo_carrinho{
     width: 38px;
     height: 38px;
@@ -110,7 +132,7 @@ form{
     width: 78px;
     height: 63px;
     background-color: rgb(223, 67, 26);
-    margin-left: 82em;
+    margin-left: 79em;
     margin-top: -4.6em;
     border-radius: 3px;
     border: none;
